changing img location

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TY WONG</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,18 +13,18 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1>I'm Teddy.</h1>
         <h2>a programmer.</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
         <a href="https://www.flaticon.com/free-icons/city" title="city icons">
-          <img class="city-image" src="images/green-city.png" alt="city-img">
+          <img class="city-image" src="green-city.png" alt="city-img">
         </a>
 
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img class="teddy-img" src="images/tywong.png" alt="ty-img">
+          <img class="teddy-img" src="tywong.png" alt="ty-img">
           <h2>Hello.</h2>
           <p>I am a Web Designer and Developer.</p>
     </div>
@@ -35,7 +35,7 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <a href="https://www.flaticon.com/free-icons/coding" title="coding icons">
-          <img class="coding-skill" src="images/coding.png" alt="coding-img">
+          <img class="coding-skill" src="coding.png" alt="coding-img">
         </a>
         <h3>Design & Developer</h3>
         <p>I started to learn coding online because I wanted to try something new. Over time, I have completed alot of projects and gained alot of experience designing and developing websites and applications.</p>
@@ -43,7 +43,7 @@
 
       <div class="skill-row">
         <a href="https://www.flaticon.com/free-icons/cooking" title="cooking icons">
-        <img class="cooking-skill" src="images/soup.png" alt="cooking-img">
+        <img class="cooking-skill" src="soup.png" alt="cooking-img">
         </a>
         <h3>Cooking</h3>
         <p>I love cooking. In fact, I had a restaurant and I was the Chef for 7 years before it was shut down.</p>
